hphp/hack/test/typecheck/tconst/unassigned_tconst.php.exp
File "unassigned_tconst.php", line 4, characters 14-17:
Please assign a value (Typing[4055])
